--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   color: white;
 }
 
+.App-header a {
+  text-decoration: underline;
+}
+
 .App-intro {
   font-size: large;
 }
@@ -21,4 +25,9 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+a.nav--active {
+  color: #696969;
+  text-decoration: none;
 }
